--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     {{formData.category}}
     
     <!-- Google Maps API -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK4OygwyGZyzUN4_2ZQScWZb1UsZmIB2U&sensor=TRUE"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=TRUE"></script>
     <script type="text/javascript">
       function initialize() {
         var mapOptions = {
