--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="rate.html">Rate</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
           <form class="navbar-form navbar-left" role="form">
@@ -89,7 +90,7 @@
             <div ng-class="form-group" class="form-group">
               <input type="text" class="form-control" placeholder="Enter address" ng-model="formData.address" id="address">
             </div>
-            <button type="submit" class="btn btn-default">Find</button>
+            <button type="submit" class="btn btn-default">Search</button>
           </form>
         </div>
         
