--- a/rate.html
+++ b/rate.html
@@ -38,7 +38,8 @@
         
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">About</a></li>
+            <li><a href="rate.html">Rate</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </div>
       </div>
